[project]
name = "weather-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.10",
    "langgraph>=0.3.25",
    "mcp[cli]>=1.6.0",
    "mcpadapt>=0.0.19",
    "smolagents>=1.13.0",
]
